--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src={% static 'mystyles.js' %}></script>
-        <div class="container" id="page-header">
+        <div class="container-fluid" id="page-header">
             <h1><a href="/">Story Telling Database</a></h1>
             {% block navigation %}{% endblock %}
         </div>
@@ -27,7 +27,7 @@
             </nav>
             <div class="container" id="block-content">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-xl- p1">
                         {% block content %}
                         {% endblock %}
                     </div>
