--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -8,60 +8,76 @@
 
 {% endif %}
 
+
 <div class="container">
-    <h1>Intraconnections</h1>
-    {% if intraconnections %}
-    {% for ic in intraconnections %}
-    <h3>Intraconnection Chain <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h3>
-    {% for t in ic.themes %}
-    <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}</a></h5>
-    {% endfor%}
+    <div class=" row">
+        <div class="col p2">
+            <h1>Intraconnections</h1>
+            {% if intraconnections %}
+            {% for ic in intraconnections %}
+            <h3>Intraconnection Chain <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h3>
+            {% for t in ic.themes %}
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}</a></h5>
+            {% endfor%}
 
-    <h3>Intraconnection Themes</h3>
-    {% for t in ic.themes %}
-    <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
-    {% for s in t.stories %}
-    <a href="/stories/{{si.id}}/">{{s.name}}</a>
-    {% endfor %}
-    {% endfor %}
-    {% endfor %}
+            <h3>Intraconnection Themes</h3>
+            {% for t in ic.themes %}
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
+            {% for s in t.stories %}
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
+            {% endfor %}
+            {% endfor %}
+            {% endfor %}
 
-</div>
 
-{% elif chainless_themes %}
-<div class="container">
-    <h3>Intraconnection Themes</h3>
-    {% for t in chainless_themes %}
-    <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
-    {% for s in t.stories %}
-    <a href="/stories/{{si.id}}/">{{s.name}}</a>
-    {% endfor %}
-    {% endfor %}
+            {% elif chainless_themes %}
+            <h3>Intraconnection Themes</h3>
+            {% for t in chainless_themes %}
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
+            {% for s in t.stories %}
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
+            {% endfor %}
+            {% endfor %}
 
-    </div>
+            {% if story_connections_intra %}
+            <h3>Story to Story connections</h3>
+            {% for s in story_connections_intra %}
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
+            {% endfor %}
+            {% endif%}
 
-    {% endif %}
-    <div class="container">
-        {% if intraconnections %}
-        <h1>Interconnections</h1>
+            {% endif %}
+        </div>
+        <div class="col p2">
+            {% if intraconnections %}
+            <h1>Interconnections</h1>
 
-        <h2>Chains </h2>
-        <h3>Interconnection Chains:
+            <h2>Chains </h2>
+            <h3>Interconnection Chains:
+                {% for ic in interconnections %}
+                <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}</a>
+                {% endfor %}</h3>
+
+            <h3>Interconnection Themes</h3>
             {% for ic in interconnections %}
-            <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}</a>
-            {% endfor %}</h3>
 
-        <h3>Interconnection Themes</h3>
-        {% for ic in interconnections %}
-
-        <h5>
-            <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h5>
+            <h5>
+                <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h5>
 
             {% for t in ic.themes %}
             <a href="/themes/{{t.theme.id}}/">{{t.theme.name}}</a>
             {% endfor%}
-        {% endfor %}
+            {% endfor %}
 
         {% endif %}
+        {% if story_connections_inter %}
+        <h3>Story to Story connections</h3>
+        {% for s in story_connections_inter %}
+        <a href="/stories/{{si.id}}/">{{s.name}}</a>
+        {% endfor %}
+        {% endif%}
+        </div>
+
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
