--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -15,16 +15,16 @@
             <h1>Intraconnections</h1>
             {% if intraconnections %}
             {% for ic in intraconnections %}
-            <h3>Intraconnection Chain <a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h3>
+            <h3>Intraconnection Chain <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h3>
             {% for t in ic.themes %}
-            <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}</a></h5>
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}</a></h5>
             {% endfor%}
 
             <h3>Intraconnection Themes</h3>
             {% for t in ic.themes %}
-            <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
             {% for s in t.stories %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endfor %}
             {% endfor %}
@@ -33,16 +33,16 @@
             {% elif chainless_themes %}
             <h3>Intraconnection Themes</h3>
             {% for t in chainless_themes %}
-            <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
+            <h5><a href="/themes/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
             {% for s in t.stories %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endfor %}
 
             {% if story_connections_intra %}
             <h3>Story to Story connections</h3>
             {% for s in story_connections_intra %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/stories/{{si.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endif%}
 
@@ -55,17 +55,17 @@
             <h2>Chains </h2>
             <h3>Interconnection Chains:
                 {% for ic in interconnections %}
-                <a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}</a>
+                <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}</a>
                 {% endfor %}</h3>
 
             <h3>Interconnection Themes</h3>
             {% for ic in interconnections %}
 
             <h5>
-                <a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h5>
+                <a href="/chains/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h5>
 
             {% for t in ic.themes %}
-            <a href="/theme/{{t.theme.id}}/">{{t.theme.name}}</a>
+            <a href="/themes/{{t.theme.id}}/">{{t.theme.name}}</a>
             {% endfor%}
             {% endfor %}
 
@@ -73,7 +73,7 @@
         {% if story_connections_inter %}
         <h3>Story to Story connections</h3>
         {% for s in story_connections_inter %}
-        <a href="/story/{{s.id}}/">{{s.name}}</a>
+        <a href="/stories/{{s.id}}/">{{s.name}}</a>
         {% endfor %}
         {% endif%}
         </div>
@@ -82,7 +82,7 @@
         <div class="col p2">
             <h3>Single Stories</h3>
         {% for s in single_stories %}
-        <a href="/story/{{s.id}}/">{{s.name}}</a>
+        <a href="/stories/{{s.id}}/">{{s.name}}</a>
         {% endfor %}
         </div>
         {% endif %}
