--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src={% static 'mystyles.js' %}></script>
         <div class="container-fluid" id="page-header">
-            <h1><a href="/">Story Telling Database</a></h1>
+
+            <h1><a href="/">{% if debug %}LOCAL DB{%else%}Story Telling Database{%endif%}</a></h1>
             {% block navigation %}{% endblock %}
         </div>
         <div class="wrapper">
