--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -12,54 +12,59 @@
 
 <div class="container">
     <div class=" row">
+            {% if intraconnections %}
         <div class="col p2">
             <h1>Intraconnections</h1>
-            {% if intraconnections %}
+            <h3>Chain:</h3>
             {% for ic in intraconnections %}
-            <h3>Intraconnection Chain <a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}:</a></h3>
+            <h5><a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}</a></h5>
             {% for t in ic.themes %}
-            <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}</a></h5>
+            <a href="/theme/{{t.theme.id}}/">{{t.theme.name}}</a>
+            {% endfor %}
             {% endfor%}
-
-            <h3>Intraconnection Themes</h3>
+            <h3>Themes</h3>
+            {% for ic in intraconnections %}
             {% for t in ic.themes %}
             <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
             {% for s in t.stories %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/story/{{s.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endfor %}
             {% endfor %}
 
-
-            {% elif chainless_themes %}
-            <h3>Intraconnection Themes</h3>
+        </div>
+        {% elif chainless_themes %}
+        <div class="col p2">
+            <h1>Intraconnections</h1>
+            <h3>Themes</h3>
             {% for t in chainless_themes %}
             <h5><a href="/theme/{{t.theme.id}}/">{{t.theme.name}}:</a></h5>
             {% for s in t.stories %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/story/{{s.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endfor %}
 
             {% if story_connections_intra %}
             <h3>Story to Story connections</h3>
             {% for s in story_connections_intra %}
-            <a href="/story/{{si.id}}/">{{s.name}}</a>
+            <a href="/story/{{s.id}}/">{{s.name}}</a>
             {% endfor %}
             {% endif%}
 
-            {% endif %}
         </div>
+            {% endif %}
+            {% if interconnections %}
         <div class="col p2">
-            {% if intraconnections %}
             <h1>Interconnections</h1>
 
-            <h2>Chains </h2>
-            <h3>Interconnection Chains:
+            <h3>Chains</h3>
                 {% for ic in interconnections %}
+            <h5>
                 <a href="/chain/{{ic.chain.id}}/">{{ic.chain.name}}</a>
-                {% endfor %}</h3>
+            </h5>
+                {% endfor %}
 
-            <h3>Interconnection Themes</h3>
+            <h3>Themes</h3>
             {% for ic in interconnections %}
 
             <h5>
@@ -69,19 +74,18 @@
             <a href="/theme/{{t.theme.id}}/">{{t.theme.name}}</a>
             {% endfor%}
             {% endfor %}
-
-        {% endif %}
         {% if story_connections_inter %}
         <h3>Story to Story connections</h3>
         {% for s in story_connections_inter %}
         <a href="/story/{{s.id}}/">{{s.name}}</a>
         {% endfor %}
-        {% endif%}
+        {% endif %}
         </div>
+        {% endif%}
 
         {% if single_stories %}
         <div class="col p2">
-            <h3>Single Stories</h3>
+            <h3>Unconnected Stories</h3>
         {% for s in single_stories %}
         <a href="/story/{{s.id}}/">{{s.name}}</a>
         {% endfor %}
