cloudinary with signed urls!

--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -7,6 +7,7 @@
 <h4>participation group: {{ participant.participation_group }} </h4>
 
 {% endif %}
+<img src="{{cl}}">
 
 {% if stories %}
 <h5>stories</h5>
