--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -1,5 +1,5 @@
 {% extends 'confabulation/base.html' %}
-
+{% load story_tag %}
 {% block title %} Analysis: {{analysis_point.name}}{% endblock %}
 {% block content %}
 
@@ -18,7 +18,7 @@
     {% if stories %}
     <h3>Stories</h3>
     {% for s in stories %}
-    <a href="{{s.url}}">{{s.name}}<img src="{{s.thumbnail}}"></a>
+    {% story_tag s.id 150 %}
     {% endfor %}
     {% endif %}
 </div>
