Story template tag (#46)
* template tag for showing story thumb and link

* use template tag for analysis point

* rather use a tag that can handle a whole list of stories

* pretty pretty story thumbnails

* fix test so thumbnail size is not in the test

--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -1,5 +1,5 @@
 {% extends 'confabulation/base.html' %}
-
+{% load story_list %}
 {% block title %} Analysis: {{analysis_point.name}}{% endblock %}
 {% block content %}
 
@@ -17,9 +17,7 @@
 <div>
     {% if stories %}
     <h3>Stories</h3>
-    {% for s in stories %}
-    <a href="{{s.url}}">{{s.name}}<img src="{{s.thumbnail}}"></a>
-    {% endfor %}
+    {% story_list stories 150%}
     {% endif %}
 </div>
 
