--- a/templates/confabulation/connectionView.html
+++ b/templates/confabulation/connectionView.html
@@ -19,7 +19,11 @@
     <div >
         {% if inter_chain %}
         <h5>The one connecting Chain accross participants </h5>
-        <h3><a href="/chain/{{inter_chain.id}}/">{{inter_chain.name}}</a></h3>
+        <div class="chain">
+            <h3><a href="/chain/{{inter_chain.id}}/">{{inter_chain.name}}</a></h3>
+        </div>
+                <h3>Themes for each participant:</h3>
+
         {% endif%}
     </div>
         {% for p in participants %}
