--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -115,13 +115,6 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
     border-radius: 6px 0 6px 6px;
 }
 
-.thumbnail {
-    text-align:center;
-    padding-bottom: 0.5em;
-    margin: 0.4em;
-    display: inline-block;
-}
-
 .tc_block {
     display: block;
     margin-bottom: 1em;
@@ -145,7 +138,7 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 .theme:hover {
     text-decoration: none;
     color: #FFFFFF;
-    background: #8F79FC;
+    background: #A999F9;
 }
 
 .theme_inline  {
@@ -175,22 +168,49 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 .chain:hover {
     text-decoration: none;
     color: #FFFFFF;
-    background: #2F0FCE;
+    background: #6A5EA5;
 }
 
 .connection  {
-    display: inline;
-    background: #745AF9;
-    border-radius: 5px;
+    display: inline-block;
+    text-align: justify;
     border: solid 2px #745AF9;
-    color: #FFFFFF;
-    margin: 1px;
-}
-
-.connection a {
-    color: #FFFFFF;
+    background:#745AF9;
+    padding: 2px;
+    border-radius: 3px;
+    margin: 2px;
 }
 
 .keyword {
     color: #745AF9;
 }
+
+.story {
+    display: inline;
+    background: #CD2D2D;
+    border-radius: 3px;
+    color: #FFFFFF;
+    padding: 2px;
+    margin: 1px;
+}
+
+.story:hover{
+    text-decoration: none;
+    color: #FFFFFF;
+    background: #FF7D7D;
+}
+
+.thumbnail {
+    text-align:center;
+    padding: 2px;
+    margin: 0.4em;
+    display: inline-block;
+    background: #CD2D2D;
+    border-radius: 5px;
+    color: #FFFFFF;
+}
+
+.thumbnail:hover{
+    background: #FF7D7D;
+}
+
