--- a/templates/confabulation/connectionView.html
+++ b/templates/confabulation/connectionView.html
@@ -17,7 +17,6 @@
         {{connection.description}}
     </div>
 
-    <div class="contianer">
     <div >
         {% if inter_chain %}
         <h5>The one connecting Chain accross participants </h5>
@@ -25,16 +24,16 @@
                 <h3>Themes for each participant:</h3>
 
         {% endif%}
-    </div>
+    <div class="contianer">
         {% for p in participants %}
-        <div class="row">
+        <div class="row my-5">
             <div class="col-2 p2">
                 <h2><a href="/participant/{{p.p_id}}/">{{p.name}}</a></h2>
             </div>
                 {% if inter_chain %}
                 {% theme_with_keywords_list p.themes %}
                 {% else %}
-            <div class="col-10 p2">
+            <div class="col-9 p2">
                 {% chain_with_theme_inline_list p.chains %}
                 <h5>Themes</h5>
                 {% theme_inline_list p.themes %}
@@ -43,7 +42,7 @@
         </div>
         {% endfor %}
     </div>
-
+    </div>
     {% endif %}
-    {% endblock%}
 </div>
+    {% endblock%}
